# agent-design-patterns

./: .env.example  .gcloudignore  .gitignore  .markdownlint-cli2.jsonc  Dockerfile  README.md  TODO.txt  build.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-pages.yml
docs/: index.html  patterns.json
docs/static/css/: common.css  main.css  patterns.css
docs/static/js/: main.js
patterns/: __init__.py  config.py  utils.py
patterns/human_in_the_loop/: README.md  __init__.py  agent.py  test_agent.py
patterns/human_in_the_loop/ui/: __init__.py
patterns/orchestrator/: README.md  __init__.py  agent.py  test_agent.py
patterns/orchestrator/ui/: __init__.py
patterns/rag/: README.md  __init__.py  agent.py  db.py  embeddings.py  ingest.py  test_agent.py  test_rag.py
patterns/rag/data/: knowledge.csv
patterns/rag/ui/: __init__.py
patterns/reflection/: README.md  __init__.py  agent.py  test_agent.py
patterns/reflection/ui/: __init__.py
patterns/sequential/: README.md  __init__.py  agent.py  test_agent.py
patterns/sequential/ui/: __init__.py
patterns/template/: README.md  __init__.py  agent.py  requirements.txt  test_agent.py
patterns/template/ui/: __init__.py
patterns/tool_use/: README.md  agent.py  test_agent.py
patterns/voting/: README.md  test_agent.py
static/css/: common.css  main.css  patterns.css
static/js/: main.js  stream-handler.js
templates/: base.html.j2  index.html  index.html.j2  layout_pattern.html  simple_agent_layout.html.j2
(+34 files in other folders)
